--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -153,13 +153,14 @@ jobs:
         set -euo pipefail
 
         KM="${{ matrix.combo.keymap }}"
-        FM="${{ matrix.combo.format }}"   # bt | dongle | reset
+        FM="${{ matrix.combo.format }}"   # bt | dongle | reset | prospector
         NM="${{ matrix.combo.name }}"
-        BD="${{ matrix.combo.board }}"    # nice_nano_v2
+        BD="${{ matrix.combo.board }}"    # nice_nano_v2 | seeeduino_xiao_ble
 
         declare -A LIST=(
           [bt]="charybdis_left charybdis_right"
           [dongle]="charybdis_left charybdis_right charybdis_dongle"
+          [prospector]+"charybdis_left charybdis_right charybdis_dongle prospector_adapter"
           [reset]="settings_reset"
         )
 
