--- a/config/west.yml
+++ b/config/west.yml
@@ -5,7 +5,9 @@ manifest:
 
     - name: badjeff
       url-base: https://github.com/badjeff
-
+    
+    - name: carrefinho
+      url-base: https://github.com/carrefinho
   projects:
     - name: zmk
       remote: zmkfirmware
@@ -15,6 +17,9 @@ manifest:
     - name: zmk-pmw3610-driver
       remote: badjeff
       revision: main
-
+      
+    - name: prospector-zmk-module
+      remote: carrefinho
+      revision: main
   self:
     path: config
