--- a/config/charybdis.conf
+++ b/config/charybdis.conf
@@ -42,3 +42,8 @@ CONFIG_NRF_STORE_REBOOT_TYPE_GPREGRET=n
 
 ## Enable split keyboard
 CONFIG_ZMK_SPLIT=y
+
+## Prospector Dongle
+CONFIG_PROSPECTOR_USE_AMBIENT_LIGHT_SENSOR=n
+CONFIG_PROSPECTOR_FIXED_BRIGHTNESS=80
+CONFIG_PROSPECTOR_LAYER_ROLLER_ALL_CAPS=y
